Replace voucher with group lessons

--- a/index_en.html
+++ b/index_en.html
@@ -107,9 +107,9 @@
                         Request a training session
                     </button>
                 </a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfLfclAv1OM4CsRTYzbgZAeyPfwVN6tqoxv_zp-c4CEIKZU3w/viewform">
+                <a href="https://forms.gle/w9ZAZaREShEwL9tj8">
                     <button type="button" class="btn btn-lg bg-green px-4 me-sm-3 text-white">
-                        Voucher
+                        Group lessons
                     </button>
                 </a>
             </div>
