Replace group lessons with voucher

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                         Poptat trénink
                     </button>
                 </a>
-                <a href="https://forms.gle/w9ZAZaREShEwL9tj8">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfELEG7WsPrpvpi8lva-oFnCSRkzM-FgzUsqSNiRCOi6ggdrg/viewform">
                     <button type="button" class="btn btn-lg bg-green px-4 me-sm-3 text-white">
-                        Skupinové lekce
+                        Voucher
                     </button>
                 </a>
             </div>
