--- a/index.html
+++ b/index.html
@@ -450,26 +450,27 @@
                         <br> Stačí nám napsat:
                     </p>
                     <div class="mb-2">
-                        <a href="mailto:elementswimming@gmail.com" class="d-flex align-items-center mb-3 text-body">
+                        <a href="mailto:elementswimming@gmail.com"
+                            class="d-flex align-items-center mb-3 text-body contact-item">
                             <i class="bi bi-envelope fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">elementswimming@gmail.com</span>
                         </a>
-                        <a href="tel:+420725956042" class="d-flex align-items-center mb-3 text-body">
+                        <a href="tel:+420725956042" class="d-flex align-items-center mb-3 text-body contact-item">
                             <i class="bi bi-telephone fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">725 956 042</span>
                         </a>
                         <a href="https://www.instagram.com/elementswimming_cz/"
-                            class="d-flex align-items-center mb-3 text-body">
+                            class="d-flex align-items-center mb-3 text-body contact-item">
                             <i class="bi bi-instagram fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">elementswimming_cz</span>
                         </a>
                         <a href="https://www.linkedin.com/in/dominik-vavrečka-1a272a145/"
-                            class="d-flex align-items-center mb-3 text-body">
+                            class="d-flex align-items-center mb-3 text-body contact-item">
                             <i class="bi bi-linkedin fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">Dominik Vavrečka</span>
                         </a>
                         <a href="https://www.youtube.com/@elementswimming8589"
-                            class="d-flex align-items-center mb-3 text-body">
+                            class="d-flex align-items-center mb-3 text-body contact-item">
                             <i class="bi bi-youtube fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">Youtube</span>
                         </a>
