--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
     </nav>
 
     <!-- Hero / Home Banner -->
-    <!-- Hero / Home Banner -->
-    <section id="home" class="container-xl py-5 mt-5">
+    <section id="home" class="container-xl py-5 my-5">
         <div class="hero-glass mt-5" data-aos="fade-up">
             <div class="row align-items-center w-100 m-0">
-                <div class="col-lg-6 p-4">
+                <div class="col-lg-5 p-4">
                     <p class="text-uppercase text-primary fw-bold mb-4">Do bazénu? Jedině s námi!</p>
                     <h1 class="display-3 fw-bold mb-3">Plavecký trénink <br><span class="brand-gradient">21.
                             století</span></h1>
@@ -109,9 +108,9 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-6 text-center" data-aos="zoom-in" data-aos-delay="200">
+                <div class="col-lg-7 text-center" data-aos="zoom-in" data-aos-delay="200">
                     <img src="static/images/main/home_photo.webp" class="img-fluid rounded-5 shadow-lg glass-card"
-                        title="Úvodní foto" alt="Úvodní foto" style="max-height: 600px;">
+                        title="Úvodní foto" alt="Úvodní foto" style="max-height: 800px;">
                 </div>
             </div>
         </div>
@@ -152,7 +151,9 @@
                         Jeho cílem je předávat aktuální poznatky a pomáhat každému rozvíjet svůj potenciál. Právě tak
                         vznikl <span class="text-primary fw-bold">Element swimming</span>.
                     </p>
-                    <a href="https://www.youtube.com/watch?v=lZhZZNMY8ic" class="btn-modern">Promo Video</a>
+                    <a href="https://www.youtube.com/watch?v=lZhZZNMY8ic">
+                        <button type="button" class="btn-modern">Promo video</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -266,8 +267,7 @@
     </section>
 
     <!-- Career Section -->
-    <!-- Career Section -->
-    <section id="career" class="container-xl py-5 my-5">
+    <section id="career" class="container-xl my-5">
         <div class="glass-panel p-5">
             <div class="row align-items-center g-5">
                 <div class="col-lg-5 mb-4 mb-lg-0 text-lg-start" data-aos="fade-right">
