Minor fixes, mobile + colors

--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
 
     <!-- References Carousel modern look -->
     <section class="container-xl py-5 my-5 carousel-testimonial" data-aos="fade-up">
-        <h2 class="display-5 pt-3 pb-0 fw-bold text-center mb-5 brand-gradient">Jak to vidí naši klienti?</h2>
-        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <h2 class="display-5 pt-3 pb-0 fw-bold text-center brand-gradient">Jak to vidí naši klienti?</h2>
+        <div id="myCarousel" class="carousel slide py-5">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" aria-label="Slide 1"
                     class="active"></button>
@@ -340,13 +340,13 @@
             <div class="carousel-inner">
                 <div class="carousel-item active text-center">
                     <div class="row align-items-center justify-content-center g-4">
-                        <div class="col-lg-6 mb-4 mb-lg-0">
+                        <div class="col-lg-4 mb-4 mb-lg-0">
                             <img src="static/images/references/bara.webp" class="rounded-4 shadow img-fluid"
                                 alt="Bára K. Foto" style="max-width:270px;" />
                         </div>
                         <div class="col-lg-6 text-start">
-                            <blockquote class="blockquote fw-light" style="font-size:1.1rem;">
-                                <span class="fs-5 text-body">"V Lekcích s Dominikem pokračuji, našla jsem si nový
+                            <blockquote class="fw-light">
+                                <span class="text-body">"V Lekcích s Dominikem pokračuji, našla jsem si nový
                                     koníček a činnost, na kterou se těším. Tréninky jsou pestré, zábavné, řešíme
                                     techniku, správnost provedení i využití pomůcek. Další výhodou je rychlá a
                                     flexibilní domluva."</span>
@@ -357,13 +357,13 @@
                 </div>
                 <div class="carousel-item text-center">
                     <div class="row align-items-center justify-content-center g-4">
-                        <div class="col-lg-6 mb-4 mb-lg-0">
+                        <div class="col-lg-4 mb-4 mb-lg-0">
                             <img src="static/images/references/eva.webp" class="rounded-4 shadow img-fluid"
                                 alt="Eva S. Foto" style="max-width:270px;" />
                         </div>
                         <div class="col-lg-6 text-start">
-                            <blockquote class="blockquote fw-light" style="font-size:1.1rem;">
-                                <span class="fs-5 text-body">"Dnešní trénink byl super. Jsem nadšená. Lucka taky. Určo
+                            <blockquote class="fw-light">
+                                <span class="text-body">"Dnešní trénink byl super. Jsem nadšená. Lucka taky. Určo
                                     budeme dále pokračovat. Pošli mi prosím ta podvodní videa, chci se ještě mrknout.
                                     Děkuju!"</span>
                                 <footer class="blockquote-footer mt-2">Eva S.</footer>
@@ -373,13 +373,13 @@
                 </div>
                 <div class="carousel-item text-center">
                     <div class="row align-items-center justify-content-center g-4">
-                        <div class="col-lg-6 mb-4 mb-lg-0">
+                        <div class="col-lg-4 mb-4 mb-lg-0">
                             <img src="static/images/references/tadeas.webp" class="rounded-4 shadow img-fluid"
                                 alt="Tadeáš V. Foto" style="max-width:270px;" />
                         </div>
                         <div class="col-lg-6 text-start">
-                            <blockquote class="blockquote fw-light" style="font-size:1.1rem;">
-                                <span class="fs-5 text-body">"Během 3 tréninků jsem díky Dominikovi pochopil chyby,
+                            <blockquote class="fw-light">
+                                <span class="text-body">"Během 3 tréninků jsem díky Dominikovi pochopil chyby,
                                     které dělám při plavání, a povedlo se mi je odbourat. Hodiny se přizpůsobovaly tomu,
                                     na kterých stylech jsem chtěl pracovat."</span>
                                 <footer class="blockquote-footer mt-2">Tadeáš V.</footer>
@@ -389,13 +389,13 @@
                 </div>
                 <div class="carousel-item text-center">
                     <div class="row align-items-center justify-content-center g-4">
-                        <div class="col-lg-6 mb-4 mb-lg-0">
+                        <div class="col-lg-4 mb-4 mb-lg-0">
                             <img src="static/images/references/sylva.webp" class="rounded-4 shadow img-fluid"
                                 alt="Sylva J. Foto" style="max-width:270px;" />
                         </div>
                         <div class="col-lg-6 text-start">
-                            <blockquote class="blockquote fw-light" style="font-size:1.1rem;">
-                                <span class="fs-5 text-body">"Myslela jsem si, že jsem ztracený případ... A byla jsem
+                            <blockquote class="fw-light">
+                                <span class="text-body">"Myslela jsem si, že jsem ztracený případ... A byla jsem
                                     nadšená! Nadchl mě přístup trenéra Dominika, který přesně věděl, na co v mém případě
                                     zacílit. Teď se těším na každou návštěvu bazénu."</span>
                                 <footer class="blockquote-footer mt-2">Sylva J.</footer>
@@ -405,13 +405,13 @@
                 </div>
                 <div class="carousel-item text-center">
                     <div class="row align-items-center justify-content-center g-4">
-                        <div class="col-lg-6 mb-4 mb-lg-0">
+                        <div class="col-lg-4 mb-4 mb-lg-0">
                             <img src="static/images/references/jirka.webp" class="rounded-4 shadow img-fluid"
                                 alt="Jirka K. Foto" style="max-width:270px;" />
                         </div>
                         <div class="col-lg-6 text-start">
-                            <blockquote class="blockquote fw-light" style="font-size:1.1rem;">
-                                <span class="fs-5 text-body">"Trenér byl velice milý, profesionální, má roky zkušeností.
+                            <blockquote class="fw-light">
+                                <span class="text-body">"Trenér byl velice milý, profesionální, má roky zkušeností.
                                     Zanalizoval moji techniku a poradil, jak co zlepšit. Zkušenost byla velice
                                     pozitivní."</span>
                                 <footer class="blockquote-footer mt-2">Jirka K.</footer>
@@ -420,12 +420,12 @@
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev rounded-circle" type="button" data-bs-target="#myCarousel"
-                data-bs-slide="prev" style="background:#f4f7fb;">
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev"
+                style="background:#f4f7fb;">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             </button>
-            <button class="carousel-control-next rounded-circle" type="button" data-bs-target="#myCarousel"
-                data-bs-slide="next" style="background:#f4f7fb;">
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next"
+                style="background:#f4f7fb;">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
             </button>
         </div>
@@ -446,7 +446,7 @@
                             href="https://docs.google.com/forms/d/e/1FAIpQLSfExbsQzZFEEH5-PBYWJnsd8lAc4KQTP9j4OR8wL90DF2WM_g/viewform"
                             class="text-primary text-decoration-none fw-bold">
                             naplánovat trénink?</a><br>Máte otázky, potřebujete spojení na trenéra, nebo něco jiného?
-                        <br> Stačí nám napsat:
+                        <br> Stačí se nám ozvat:
                     </p>
                     <div class="mb-2">
                         <a href="mailto:elementswimming@gmail.com"
