Buttons, color fixes

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="glass-panel p-5">
             <div class="row align-items-center g-5">
                 <div class="col-lg-5 order-lg-2 mb-4 mb-lg-0 text-lg-end" data-aos="fade-left">
-                    <img src="static/images/main/pan_trener.webp" class="img-fluid rounded-4 shadow-lg glass-card"
+                    <img src="static/images/main/pan_trener.webp" class="img-fluid shadow-lg glass-card"
                         alt="Trenér plavání Dominik Vavrečka" style="max-width:480px;">
                 </div>
                 <div class="col-lg-7" data-aos="fade-right">
@@ -152,7 +152,9 @@
                         vznikl <span class="text-primary fw-bold">Element swimming</span>.
                     </p>
                     <a href="https://www.youtube.com/watch?v=lZhZZNMY8ic">
-                        <button type="button" class="btn-modern">Promo video</button>
+                        <button type="button" class="btn-modern d-inline-flex align-items-center gap-2">
+                            Promo video <i class="bi bi-youtube fs-5"></i>
+                        </button>
                     </a>
                 </div>
             </div>
@@ -271,7 +273,7 @@
         <div class="glass-panel p-5">
             <div class="row align-items-center g-5">
                 <div class="col-lg-5 mb-4 mb-lg-0 text-lg-start" data-aos="fade-right">
-                    <img src="static/images/main/career.webp" class="img-fluid rounded-4 shadow-lg glass-card"
+                    <img src="static/images/main/career.webp" class="img-fluid shadow-lg glass-card"
                         alt="Trenéři Element Swimming" style="max-width:480px;">
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
@@ -282,7 +284,11 @@
                         jistěji.<br><br>
                         Kontaktujte nás a povězte, proč byste měli být naším dalším skvělým trenérem.
                     </p>
-                    <a href="#contact" class="btn-modern">Více informací</a>
+                    <a href="#contact">
+                        <button type="button" class="btn-modern d-inline-flex align-items-center gap-2">
+                            Více informací
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
