Groom code, remove domů

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc, Mladá Boleslav nebo Online">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elementswimming.cz/">
-    <meta property="og:site_name" content="Element swimming">
+    <meta property="og:site_name" content="Element Swimming">
     <meta property="og:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
     <meta property="og:image:height" content="525">
     <meta property="og:image:width" content="1024">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@elementswimming">
-    <meta name="twitter:title" content="Element swimming">
+    <meta name="twitter:title" content="Element Swimming">
     <meta name="twitter:description"
         content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc, Mladá Boleslav nebo Online">
     <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
@@ -72,14 +72,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarES">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3 align-items-center">
-                    <li class="nav-item"><a href="#home" class="nav-link active" aria-current="page">Domů</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">O nás</a></li>
                     <li class="nav-item"><a href="#services" class="nav-link">Služby</a></li>
                     <li class="nav-item"><a href="#career" class="nav-link">Kariéra</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Kontakt</a></li>
                     <li class="nav-item">
-                        <a href="index_en.html" class="nav-link px-2" title="English language">
-                            <img src="static/images/icons/uk_lan.png" alt="EN" width="22" height="22">
+                        <a href="index_en.html" class="nav-link px-2 p-0" title="English language">
+                            <span class="lang-switch">
+                                <i class="bi bi-translate me-1"></i>
+                                <span class="lang-cz">CZ</span>/<span class="lang-en">EN</span>
+                            </span>
                         </a>
                     </li>
                 </ul>
@@ -140,7 +142,7 @@
                 <div class="col-lg-7" data-aos="fade-right">
                     <h2 class="display-5 fw-bold mb-4">O nás</h2>
                     <p class="lead mb-5 text-secondary" style="text-align:justify;">
-                        Organizace <span class="text-primary fw-bold">Element swimming</span> byla založena Dominikem
+                        Organizace <span class="text-primary fw-bold">Element Swimming</span> byla založena Dominikem
                         Vavrečkou a od roku 2019 posouvá hranice českého tréninku.
                         <br><br>
                         Dominik je sportovec tělem i duší. Zkušenosti nasbírané během závodní kariéry v Klubu plaveckých
@@ -149,7 +151,7 @@
                         sportovním centru Victoria.
                         <br><br>
                         Jeho cílem je předávat aktuální poznatky a pomáhat každému rozvíjet svůj potenciál. Právě tak
-                        vznikl <span class="text-primary fw-bold">Element swimming</span>.
+                        vznikl <span class="text-primary fw-bold">Element Swimming</span>.
                     </p>
                     <a href="https://www.youtube.com/watch?v=lZhZZNMY8ic">
                         <button type="button" class="btn-modern d-inline-flex align-items-center gap-2">
@@ -454,28 +456,28 @@
                             naplánovat trénink?</a><br>Máte otázky, potřebujete spojení na trenéra, nebo něco jiného?
                         <br> Stačí se nám ozvat:
                     </p>
-                    <div class="mb-2">
+                    <div>
                         <a href="mailto:elementswimming@gmail.com"
-                            class="d-flex align-items-center mb-3 text-body contact-item">
+                            class="d-flex align-items-center mb-2 text-body contact-item">
                             <i class="bi bi-envelope fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">elementswimming@gmail.com</span>
                         </a>
-                        <a href="tel:+420725956042" class="d-flex align-items-center mb-3 text-body contact-item">
+                        <a href="tel:+420725956042" class="d-flex align-items-center mb-2 text-body contact-item">
                             <i class="bi bi-telephone fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">725 956 042</span>
                         </a>
                         <a href="https://www.instagram.com/elementswimming_cz/"
-                            class="d-flex align-items-center mb-3 text-body contact-item">
+                            class="d-flex align-items-center mb-2 text-body contact-item">
                             <i class="bi bi-instagram fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">elementswimming_cz</span>
                         </a>
                         <a href="https://www.linkedin.com/in/dominik-vavrečka-1a272a145/"
-                            class="d-flex align-items-center mb-3 text-body contact-item">
+                            class="d-flex align-items-center mb-2 text-body contact-item">
                             <i class="bi bi-linkedin fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">Dominik Vavrečka</span>
                         </a>
                         <a href="https://www.youtube.com/@elementswimming8589"
-                            class="d-flex align-items-center mb-3 text-body contact-item">
+                            class="d-flex align-items-center mb-2 text-body contact-item">
                             <i class="bi bi-youtube fs-3 text-primary"></i>
                             <span class="ms-3" style="font-size:1.11rem;">Youtube</span>
                         </a>
@@ -491,7 +493,7 @@
         <div class="container-xl">
             <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
                 <div class="mb-3 mb-md-0 small text-muted">
-                    &copy; 2025 Element swimming &mdash; by
+                    &copy; 2025 Element Swimming &mdash; by
                     <a class="text-muted text-decoration-none"
                         href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a>
                 </div>
@@ -499,7 +501,6 @@
                     <img src="static/images/main/basic_logo.webp" alt="Element Swimming Logo" width="48" height="36">
                 </a>
                 <ul class="nav justify-content-end">
-                    <li class="nav-item"><a href="#home" class="nav-link px-2 text-muted">Domů</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">O nás</a></li>
                     <li class="nav-item"><a href="#services" class="nav-link px-2 text-muted">Služby</a></li>
                     <li class="nav-item"><a href="#career" class="nav-link px-2 text-muted">Kariéra</a></li>
