nab-brand + logos fixes

--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
         <div class="container-xl">
-            <a class="navbar-brand d-flex align-items-center" href="/">
-                <img src="static/images/main/basic_logo.webp" alt="Element Swimming Logo" width="48" height="36"
-                    class="me-2">
-                <span class="fs-4 fw-bold">Element Swimming</span>
+            <a class="navbar-brand d-flex align-items-center gap-2" href="/">
+                <img src="static/images/main/basic_logo.webp" alt="Element Swimming Logo" width="54" height="36">
+                <div class="d-flex align-items-center lh-1">
+                    <span class="brand-element">ELEMENT</span>
+                    <span class="brand-swimming">SWIMMING</span>
+                </div>
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarES"
                 aria-controls="navbarES" aria-expanded="false" aria-label="Menu">
@@ -273,7 +275,7 @@
     <!-- Career Section -->
     <section id="career" class="container-xl my-5">
         <div class="glass-panel p-5">
-            <div class="row align-items-center g-5">
+            <div class="row align-items-center g-5 py-3">
                 <div class="col-lg-5 mb-4 mb-lg-0 text-lg-start" data-aos="fade-right">
                     <img src="static/images/main/career.webp" class="img-fluid shadow-lg glass-card"
                         alt="Trenéři Element Swimming" style="max-width:480px;">
@@ -445,18 +447,20 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 mb-4 mb-lg-0 text-lg-end" data-aos="fade-right">
                     <img src="static/images/main/logo_blue_bezpozadi.png" class="img-fluid rounded-4"
-                        alt="Logo Element Swimming velké" style="max-width:320px;">
+                        alt="Logo Element Swimming velké" style="max-width:460px;">
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
                     <h2 class="display-5 fw-bold mb-3 brand-gradient">Kontakt</h2>
                     <p class="lead mb-4 text-secondary">
-                        Chcete si <a
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSfExbsQzZFEEH5-PBYWJnsd8lAc4KQTP9j4OR8wL90DF2WM_g/viewform"
-                            class="text-primary text-decoration-none fw-bold">
-                            naplánovat trénink?</a><br>Máte otázky, potřebujete spojení na trenéra, nebo něco jiného?
-                        <br> Stačí se nám ozvat:
+                        Chcete si naplánovat trénink? Máte otázky, potřebujete spojení na trenéra, nebo něco jiného?
+                        Stačí se nám ozvat.
                     </p>
                     <div>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfExbsQzZFEEH5-PBYWJnsd8lAc4KQTP9j4OR8wL90DF2WM_g/viewform"
+                            target="_blank" class="d-flex align-items-center text-body contact-item">
+                            <i class="bi bi-file-text fs-3 text-primary"></i>
+                            <span class="ms-3" style="font-size:1.11rem;">Nezávazná poptávka</span>
+                        </a>
                         <a href="mailto:elementswimming@gmail.com"
                             class="d-flex align-items-center text-body contact-item">
                             <i class="bi bi-envelope fs-3 text-primary"></i>
@@ -498,7 +502,7 @@
                         href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a>
                 </div>
                 <a href="/" class="mb-3 mb-md-0">
-                    <img src="static/images/main/basic_logo.webp" alt="Element Swimming Logo" width="48" height="36">
+                    <img src="static/images/main/basic_logo.webp" alt="Element Swimming Logo" width="54" height="36">
                 </a>
                 <ul class="nav justify-content-end">
                     <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">O nás</a></li>
