--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
         <div class="container-xl">
             <a class="navbar-brand d-flex align-items-center gap-2" href="/">
-                <img src="static/images/main/basic_logo.webp" alt="Element Swimming Logo" width="54" height="36">
+                <img src="static/images/main/logo_blue_bezpozadi_2.png" alt="Element Swimming Logo" width="42"
+                    height="36">
                 <div class="d-flex align-items-center lh-1">
                     <span class="brand-element">ELEMENT</span>
                     <span class="brand-swimming">SWIMMING</span>
@@ -502,7 +503,8 @@
                         href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a>
                 </div>
                 <a href="/" class="mb-3 mb-md-0">
-                    <img src="static/images/main/basic_logo.webp" alt="Element Swimming Logo" width="54" height="36">
+                    <img src="static/images/main/logo_blue_bezpozadi_2.png" alt="Element Swimming Logo" width="42"
+                        height="36">
                 </a>
                 <ul class="nav justify-content-end">
                     <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">O nás</a></li>
