--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="hero-glass mt-5" data-aos="fade-up">
             <div class="row align-items-center w-100 m-0">
                 <div class="col-lg-5 p-4">
-                    <p class="text-uppercase text-primary fw-bold mb-4">Do bazénu? Jedině s námi!</p>
+                    <h5 class="text-uppercase text-primary fw-bold mb-4">Do bazénu? Jedině s námi!</h5>
                     <h1 class="display-3 fw-bold mb-3">Plavecký trénink <br><span class="brand-gradient">21.
                             století</span></h1>
                     <p class="lead mb-4 text-muted">Moderní tréninkový proces podložený aktuálními trendy a vedený
